Finalize backend dependencies and cleanup

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "mongoose": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "autoprefixer": "^10.4.23",
+    "nodemon": "^3.1.11",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
